@@ -68,7 +68,8 @@ class PyODBCConnector(Connector):
         
     def is_disconnect(self, e):
         if isinstance(e, self.dbapi.ProgrammingError):
-            return "The cursor's connection has been closed." in str(e) or 'Attempt to use a closed connection.' in str(e)
+            return "The cursor's connection has been closed." in str(e) or \
+                            'Attempt to use a closed connection.' in str(e)
         elif isinstance(e, self.dbapi.Error):
             return '[08S01]' in str(e)
         else:
